kustomize/overlays/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-core-provider-gateway
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: fint-core-provider-gateway-kafka-certificates
      containers:
        - image: ghcr.io/fintlabs/fint-core-provider-gateway:sha-0000000
          name: fint-core-provider-gateway
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "2Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
